fix: change z-index mobile bar/remove condition for catalog settings

--- a/src/scss/_mobile-bar.scss
+++ b/src/scss/_mobile-bar.scss
@@ -12,7 +12,7 @@
     right: 3rem;
     border-radius: 2rem;
     background: $white;
-    z-index: 6;
+    z-index: 5;
     margin-bottom: 0;
 
     &-list {
